--- a/javaeehelloworld-ejb/pom.xml
+++ b/javaeehelloworld-ejb/pom.xml
@@ -12,18 +12,19 @@
     </parent>
 
     <artifactId>helloworld-ejb</artifactId>
+<!--    Required in order for downstream containers to recognize as EJB component-->
     <packaging>ejb</packaging>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ejb-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <ejbVersion>3.1</ejbVersion>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-ejb-plugin</artifactId>-->
+<!--                <version>3.1.0</version>-->
+<!--                <configuration>-->
+<!--                    <ejbVersion>3.1</ejbVersion>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
