--- a/javaeehelloworld-ejb/src/main/resources/log4j2.properties
+++ b/javaeehelloworld-ejb/src/main/resources/log4j2.properties
@@ -11,7 +11,7 @@ appenders = console
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d% -5p %c{3}:%L - %m%n
+appender.console.layout.pattern = %d% -%5p %c{3}:%L - %m%n
 
 rootLogger.level = debug
 rootLogger.appenderRefs = stdout
